--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="timeline-item left" data-year="1980">
                 <div class="card">
                     <h3>Pac-Man</h3>
-                    <img src="assets/images/pacman.jpg" alt="Pac-Man" onerror="this.src='assets/images/alien_sm.jpg'"> 
+                    <img src="assets/images/Pac-man.png" alt="Pac-Man" onerror="this.src='assets/images/alien_sm.jpg'"> 
                     <p>Перша ілюзія розуму. Кожен привид мав свій унікальний алгоритм переслідування.</p>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="timeline-item right" data-year="2000">
                 <div class="card">
                     <h3>The Sims</h3>
-                    <img src="assets/images/sims.jpg" alt="The Sims" onerror="this.src='assets/images/rdr2_sm.jpg'">
+                    <img src="assets/images/the_sims.jpg" alt="The Sims" onerror="this.src='assets/images/rdr2_sm.jpg'">
                     <p>ШІ потреб. Персонажі почали "жити" самі по собі, керуючись голодом та комфортом.</p>
                 </div>
             </div>
