--- a/sources.html
+++ b/sources.html
@@ -36,19 +36,19 @@
                         <a href="https://www.researchgate.net/publication/355518086_Finite_State_Machine_in_Game_Development" target="_blank" class="source-link">
                             Finite State Machine in Game Development ↗
                         </a>
-                        <p class="source-desc">Фундаментальне дослідження методів FSM, які використовуються для створення логіки NPC.</p>
+                        <p class="source-desc">Фундаментальне дослідження методів FSM.</p>
                     </li>
                     <li class="source-item">
                         <a href="https://arnauld-alex.com/using-goap-for-advanced-gaming-ai-techniques" target="_blank" class="source-link">
                             Using GOAP for Advanced Gaming AI ↗
                         </a>
-                        <p class="source-desc">Детальний розбір алгоритму Goal-Oriented Action Planning (F.E.A.R.).</p>
+                        <p class="source-desc">Детальний розбір алгоритму Goal-Oriented Action Planning.</p>
                     </li>
                     <li class="source-item">
                         <a href="https://www.cubix.co/blog/the-rise-of-generative-ai-in-video-games/" target="_blank" class="source-link">
                             The Rise of Generative AI in Video Games ↗
                         </a>
-                        <p class="source-desc">Огляд революції генеративного контенту та діалогів.</p>
+                        <p class="source-desc">Огляд революції генеративного контенту.</p>
                     </li>
                     <li class="source-item">
                         <a href="https://www.coursera.org/articles/machine-learning-for-video-games" target="_blank" class="source-link">
@@ -62,21 +62,16 @@
                 <ul class="sources-list">
                     <li class="source-item">
                         <span class="source-title">GDC Vault & YouTube</span>
-                        <p class="source-desc">Матеріали з конференцій розробників ігор та освітніх каналів.</p>
+                        <p class="source-desc">Матеріали з конференцій розробників ігор.</p>
                     </li>
                     <li class="source-item">
                         <span class="source-title">Ian Millington — "Artificial Intelligence for Games"</span>
-                        <p class="source-desc">Книга, що є стандартом індустрії для програмістів ШІ.</p>
-                    </li>
-                    <li class="source-item">
-                        <span class="source-title">Screen Rant — Nemesis System</span>
-                        <p class="source-desc">Аналіз унікальної системи пам'яті ворогів.</p>
+                        <p class="source-desc">Книга, що є стандартом індустрії.</p>
                     </li>
                 </ul>
 
-                <h3 style="margin-top: 4rem; border-top: 2px dashed var(--primary); padding-top: 2rem;">Прямі посилання (Raw URLs)</h3>
+                <h3 style="margin-top: 4rem; border-top: 2px dashed var(--primary); padding-top: 2rem;">Прямі посилання (Текстові джерела)</h3>
                 <ul class="sources-list" style="padding: 0; list-style: none;">
-                    
                     <li style="margin-bottom: 1rem; word-break: break-all;">
                         <a href="https://www.researchgate.net/publication/355518086_Finite_State_Machine_in_Game_Development" target="_blank" style="color: #ccc; font-family: monospace; font-size: 0.9rem; text-decoration: none;">
                             https://www.researchgate.net/publication/355518086_Finite_State_Machine_in_Game_Development
@@ -97,7 +92,6 @@
                             https://www.coursera.org/articles/machine-learning-for-video-games
                         </a>
                     </li>
-
                     <li style="margin-bottom: 1rem; word-break: break-all;">
                         <a href="https://gdcvault.com/browse/" target="_blank" style="color: #ccc; font-family: monospace; font-size: 0.9rem; text-decoration: none;">
                             https://gdcvault.com/browse/
@@ -115,7 +109,60 @@
                     </li>
                     <li style="margin-bottom: 1rem; word-break: break-all;">
                         <a href="https://books.google.com.ua/books?id=1OJ8EhvuPXAC&printsec=frontcover&redir_esc=y#v=onepage&q&f=false" target="_blank" style="color: #ccc; font-family: monospace; font-size: 0.9rem; text-decoration: none;">
-                            https://books.google.com.ua/books?id=1OJ8EhvuPXAC&printsec=frontcover&redir_esc=y#v=onepage&q&f=false
+                           https://books.google.com.ua/books?id=1OJ8EhvuPXAC&printsec=frontcover&redir_esc=y#v=onepage&q&f=false
+                        </a>
+                    </li>
+                </ul>
+
+                <h3 style="margin-top: 4rem; border-top: 2px dashed var(--primary); padding-top: 2rem;">Джерела Зображень (Image Sources)</h3>
+                <ul class="sources-list" style="padding: 0; list-style: none;">
+                    
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">Alien Isolation (Xenomorph):</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fx.com%2Fplaydtf%2Fstatus%2F1975507649346064528&psig=AOvVaw0qpB4iEzWP7lCkroAscyt0&ust=1765567404364000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMjI4a2htpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fx.com%2Fplaydtf%2Fstatus%2F1975507649346064528&psig=AOvVaw0qpB4iEzWP7lCkroAscyt0&ust=1765567404364000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMjI4a2htpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">Pac-Man:</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.researchgate.net%2Ffigure%2FRL-explained-with-the-simple-game-Pac-Man1_fig2_371460543&psig=AOvVaw3C_Rx9GcYFjkaydQjYDy1J&ust=1765567516063000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCJi8hN2htpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.researchgate.net%2Ffigure%2FRL-explained-with-the-simple-game-Pac-Man1_fig2_371460543&psig=AOvVaw3C_Rx9GcYFjkaydQjYDy1J&ust=1765567516063000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCJi8hN2htpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">The Sims:</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstore.steampowered.com%2Fapp%2F3314060%2FThe_Sims_Legacy_Collection%2F%3Fl%3Ditalian&psig=AOvVaw0DPS_UIzsjXmmgP_lO9bHy&ust=1765567559720000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCICeru-htpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fstore.steampowered.com%2Fapp%2F3314060%2FThe_Sims_Legacy_Collection%2F%3Fl%3Ditalian&psig=AOvVaw0DPS_UIzsjXmmgP_lO9bHy&ust=1765567559720000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCICeru-htpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">F.E.A.R.:</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.gog.com%2Fru%2Fgame%2Ffear_platinum&psig=AOvVaw0-ECw8MV0sDoSlcjyautjl&ust=1765567610738000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCLCI6IaitpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.gog.com%2Fru%2Fgame%2Ffear_platinum&psig=AOvVaw0-ECw8MV0sDoSlcjyautjl&ust=1765567610738000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCLCI6IaitpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">Middle-earth (Nemesis):</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsuperficcionweb.com%2Fnuevo-videojuego-el-senor-de-los-anillos%2F&psig=AOvVaw01s_8gguuwFjFq7DIuEuZm&ust=1765567634384000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMiJyo-itpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fsuperficcionweb.com%2Fnuevo-videojuego-el-senor-de-los-anillos%2F&psig=AOvVaw01s_8gguuwFjFq7DIuEuZm&ust=1765567634384000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCMiJyo-itpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">RDR 2:</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.rdr2.org%2Fguides%2Fred-dead-redemption-2-special-edition-content-guide%2F&psig=AOvVaw2BQxKXo6EMo-7LftJ1xqdY&ust=1765567653260000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCNDBvp-itpEDFQAAAAAdAAAAABAE" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.rdr2.org%2Fguides%2Fred-dead-redemption-2-special-edition-content-guide%2F&psig=AOvVaw2BQxKXo6EMo-7LftJ1xqdY&ust=1765567653260000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCNDBvp-itpEDFQAAAAAdAAAAABAE
+                        </a>
+                    </li>
+
+                    <li style="margin-bottom: 1.5rem; word-break: break-all;">
+                        <span style="color: var(--primary); font-weight: bold; display: block; margin-bottom: 0.5rem;">Generative AI (Steam):</span>
+                        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsteamcommunity.com%2Fapp%2F2199920%3Fl%3Drussian&psig=AOvVaw3wB_PkHDHo0iqvZFmKX02q&ust=1765567686836000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCPCX4qmitpEDFQAAAAAdAAAAABAL" target="_blank" style="color: #888; font-family: monospace; font-size: 0.85rem; text-decoration: none;">
+                            https://www.google.com/url?sa=i&url=https%3A%2F%2Fsteamcommunity.com%2Fapp%2F2199920%3Fl%3Drussian&psig=AOvVaw3wB_PkHDHo0iqvZFmKX02q&ust=1765567686836000&source=images&cd=vfe&opi=89978449&ved=0CBQQjhxqFwoTCPCX4qmitpEDFQAAAAAdAAAAABAL
                         </a>
                     </li>
 
@@ -135,7 +182,7 @@
     <footer>
         <div class="author-box">
             <p>Авторка проєкту:</p>
-            <input type="text" id="author" placeholder="3КН-25б Бігун Дар'я">
+            <input type="text" id="author" placeholder="Твоє ім'я тут ♡">
         </div>
         <p>© 2025 • AI:GAMES</p>
     </footer>
