--- a/sources.html
+++ b/sources.html
@@ -182,10 +182,11 @@
     <footer>
         <div class="author-box">
             <p>Авторка проєкту:</p>
-            <input type="text" id="author" placeholder="Твоє ім'я тут ♡">
+            <input type="text" id="author" placeholder="3КН-25б Бігун Дар'я">
         </div>
         <p>© 2025 • AI:GAMES</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
